--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.html",
   "scripts": {
     "cy:open": "cypress open",
+    "cy:open:mobile": "cypress open --config viewportWidth=410 viewportHeight=860",
     "test": "cypress run"
   },
   "repository": {
@@ -24,5 +25,7 @@
   "devDependencies": {
     "cypress": "^9.5.1"
   },
-  
+  "dependencies": {
+    "auto": "^11.1.6"
+  }
 }
